[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cr"
path = "src/main.rs"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["cargo"] }
openssl = "0.10"

[dependencies.crypt]
path = "../crypt"
